--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://kit.fontawesome.com/46a07b2911.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="navbar">
-        <title>Personal Website</title>
+        <title>Putra Iskandar Muda</title>
     </head>
     <header>
         
